added more comments